--- a/inde.html
+++ b/inde.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local Storage - Web Storage</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-    <div class="container">
-        
-    </div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Local Storage - Web Storage</title>
+		<link rel="stylesheet" href="./css/style.css" />
+	</head>
+	<body>
+		<h1>Local Sorage - Web Storage</h1>
+		<div class="container">
+			<div id="app"></div>
+		</div>
+
+		<script src="./js/app.js"></script>
+	</body>
 </html>
